--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h3>Desarrolador Web</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio ullam maiores maxime natus repellat cupiditate, accusantium ipsum consequuntur cumque voluptatibus earum molestias commodi in praesentium.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
-            <a href="#">Descargar CV</a>
+            <a href="https://github.com/DanidelaRica/portfolio/raw/main/CV.pdf" download">Descargar CV</a>
         </div>
     </section>
 
