--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="sobremi">
             <p class="titulo-seccion">Sobre Mi</p>
             <h2>Hola, soy <span>Daniel de la Rica</span></h2>
-            <h3>Desarrolador Web</h3>
+            <h3>Desarrollador Web</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio ullam maiores maxime natus repellat cupiditate, accusantium ipsum consequuntur cumque voluptatibus earum molestias commodi in praesentium.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
             <a href="https://github.com/DanidelaRica/portfolio/raw/main/CV.pdf" download">Descargar CV</a>
@@ -161,7 +161,7 @@
 
         <div class="skill">
             <div class="info">
-                <p><span class="lista"></span>Base de datos</p>
+                <p><span class="lista"></span>Base de datos MySQL</p>
                 <span class="porcentaje">90%</span>
             </div>
             <div class="barra">
@@ -182,86 +182,34 @@
 
     <!-- SECCION PORTAFOLIO -->
     <section id="portfolio">
-        <h3 class="titulo-seccion">Mis Proyectos</h3>
-        <div class="fila">
-            <div class="proyecto">
-                <div class="overlay"></div>
-                <img src="img/proyecto1.jpg" alt="">
-                <div class="info">
-                    <h4>Descripcion Proyecto</h4>
-                    <p>Diseño Web</p>
-                </div>
-            </div>
-            <div class="proyecto">
-                <div class="overlay"></div>
-                <img src="img/proyecto2.jpg" alt="">
-                <div class="info">
-                    <h4>Descripcion Proyecto</h4>
-                    <p>Diseño Web</p>
-                </div>
-            </div>
-            <div class="proyecto">
-                <div class="overlay"></div>
-                <img src="img/proyecto3.jpg" alt="">
-                <div class="info">
-                    <h4>Descripcion Proyecto</h4>
-                    <p>Diseño Web</p>
-                </div>
+    <h3 class="titulo-seccion">Mis Proyectos</h3>
+    <div class="fila">
+        <div class="proyecto">
+            <div class="overlay"></div>
+            <img src="img/proyecto1.png" alt="">
+            <div class="info">
+                <h4>Crud de empleados con menu interactivo</h4>
+                <p>Java JPA</p>
             </div>
         </div>
-        <div class="fila">
-            <div class="proyecto">
-                <div class="overlay"></div>
-                <img src="img/proyecto4.jpg" alt="">
-                <div class="info">
-                    <h4>Descripcion Proyecto</h4>
-                    <p>Diseño Web</p>
-                </div>
-            </div>
-            <div class="proyecto">
-                <div class="overlay"></div>
-                <img src="img/proyecto5.jpg" alt="">
-                <div class="info">
-                    <h4>Descripcion Proyecto</h4>
-                    <p>Diseño Web</p>
-                </div>
-            </div>
-            <div class="proyecto">
-                <div class="overlay"></div>
-                <img src="img/proyecto6.jpg" alt="">
-                <div class="info">
-                    <h4>Descripcion Proyecto</h4>
-                    <p>Diseño Web</p>
-                </div>
+        <div class="proyecto">
+            <div class="overlay"></div>
+            <img src="img/proyecto2.jpg" alt="">
+            <div class="info">
+                <h4>Aplicación de Gestión de Turnos</h4>
+                <p>Java JSP JPA</p>
             </div>
         </div>
-        <div class="fila">
-            <div class="proyecto">
-                <div class="overlay"></div>
-                <img src="img/proyecto7.jpg" alt="">
-                <div class="info">
-                    <h4>Descripcion Proyecto</h4>
-                    <p>Diseño Web</p>
-                </div>
-            </div>
-            <div class="proyecto">
-                <div class="overlay"></div>
-                <img src="img/proyecto8.jpg" alt="">
-                <div class="info">
-                    <h4>Descripcion Proyecto</h4>
-                    <p>Diseño Web</p>
-                </div>
-            </div>
-            <div class="proyecto">
-                <div class="overlay"></div>
-                <img src="img/proyecto9.jpg" alt="">
-                <div class="info">
-                    <h4>Descripcion Proyecto</h4>
-                    <p>Diseño Web</p>
-                </div>
+        <div class="proyecto">
+            <div class="overlay"></div>
+            <img src="img/proyecto3.png" alt="">
+            <div class="info">
+                <h4>Aplicación de Reserva de Vuelos&Hoteles</h4>
+                <p>Java Spring Boot</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- SECCION CONTACTO-->
     <section id="contacto">
