--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@
             <div class="overlay"></div>
             <img src="img/proyecto1.png" alt="">
             <div class="info">
-                <h4>Crud de empleados con menu interactivo</h4>
+                <h4>
+                    <a href="https://github.com/DanidelaRica/delaRicaDaniel_pruebatec1" target="_blank">Crud de empleados con menu interactivo</a>
+                </h4>
                 <p>Java JPA</p>
             </div>
         </div>
@@ -196,7 +198,9 @@
             <div class="overlay"></div>
             <img src="img/proyecto2.jpg" alt="">
             <div class="info">
-                <h4>Aplicación de Gestión de Turnos</h4>
+                <h4>
+                    <a href="https://github.com/DanidelaRica/delaRicaDaniel_pruebatec2" target="_blank">Aplicación de Gestión de Turnos</a>
+                </h4>
                 <p>Java JSP JPA</p>
             </div>
         </div>
@@ -204,7 +208,9 @@
             <div class="overlay"></div>
             <img src="img/proyecto3.png" alt="">
             <div class="info">
-                <h4>Aplicación de Reserva de Vuelos&Hoteles</h4>
+                <h4>
+                    <a href="https://github.com/DanidelaRica/delaRicaDaniel_pruebatec4" target="_blank">Aplicación de Reserva de Vuelos&Hoteles</a>
+                </h4>
                 <p>Java Spring Boot</p>
             </div>
         </div>
