--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- SECCION SOBRE MI -->
     <section id="sobremi">
         <div class="contenedor-foto">
-            <img src="img/foto.jpg" alt="">
+            <img src="img/foto.png" alt="">
         </div>
         <div class="sobremi">
             <p class="titulo-seccion">Sobre Mi</p>
