--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <div class="fila">
         <div class="proyecto">
             <div class="overlay"></div>
-            <img src="img/proyecto1.png" alt="">
+            <a href="https://github.com/DanidelaRica/delaRicaDaniel_pruebatec1" target="_blank"><img src="img/proyecto1.png" alt=""></a>
             <div class="info">
                 <h4>
                     <a href="https://github.com/DanidelaRica/delaRicaDaniel_pruebatec1" target="_blank">Crud de empleados con menu interactivo</a>
@@ -196,7 +196,7 @@
         </div>
         <div class="proyecto">
             <div class="overlay"></div>
-            <img src="img/proyecto2.jpg" alt="">
+            <a href="https://github.com/DanidelaRica/delaRicaDaniel_pruebatec2" target="_blank"><img src="img/proyecto2.jpg" alt=""></a>
             <div class="info">
                 <h4>
                     <a href="https://github.com/DanidelaRica/delaRicaDaniel_pruebatec2" target="_blank">Aplicación de Gestión de Turnos</a>
@@ -206,7 +206,7 @@
         </div>
         <div class="proyecto">
             <div class="overlay"></div>
-            <img src="img/proyecto3.png" alt="">
+           <a href="https://github.com/DanidelaRica/delaRicaDaniel_pruebatec4" target="_blank"><img src="img/proyecto3.png" alt=""></a>
             <div class="info">
                 <h4>
                     <a href="https://github.com/DanidelaRica/delaRicaDaniel_pruebatec4" target="_blank">Aplicación de Reserva de Vuelos&Hoteles</a>
