--- a/index.html
+++ b/index.html
@@ -213,6 +213,18 @@
                 </h4>
                 <p>Java Spring Boot</p>
             </div>
+            <div class="proyecto">
+                <div class="overlay"></div>
+                <a href="https://github.com/DanidelaRica/RestauranteLaravel" target="_blank">
+                    <img src="img/proyecto4 (2).jpg" alt="">
+                </a>
+                <div class="info">
+                    <h4>
+                        <a href="https://github.com/DanidelaRica/RestauranteLaravel" target="_blank">Aplicación que gestiona reservas restaurante</a>
+                    </h4>
+                    <p>Laravel</p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
